--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,10 @@ dependencies:
   auto_size_text: 3.0.0
   cached_network_image: 3.2.1
   carousel_slider: 4.2.1
+  csv: 5.0.1
   flutter_animate: 4.1.1+1
   flutter_cache_manager: 3.3.1
+  flutter_secure_storage: 8.0.0
   flutter_staggered_grid_view: 0.7.0
   font_awesome_flutter: 10.6.0
   from_css_color: 2.0.0
@@ -65,6 +67,7 @@ dependencies:
   storage_client: 1.5.4
   supabase: 1.11.11
   supabase_flutter: 1.10.24
+  synchronized: 3.1.0
   table_calendar: 3.0.9
   timeago: 3.2.2
   url_launcher: 6.1.10
