--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_animate: 4.1.1+1
   flutter_cache_manager: 3.3.1
   flutter_plugin_android_lifecycle: 2.0.17
+  flutter_rating_bar: 4.0.1
   flutter_staggered_grid_view: 0.7.0
   font_awesome_flutter: 10.6.0
   from_css_color: 2.0.0
@@ -129,6 +130,10 @@ flutter:
     - assets/lottie_animations/
     - assets/rive_animations/
     - assets/pdfs/
+  fonts:
+    - family: Icomoon
+      fonts:
+        - asset: assets/fonts/icomoon.ttf
 
   
   # An image asset can refer to one or more resolution-specific "variants", see
