--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,9 @@ dependencies:
   aligned_tooltip: 0.0.1
   app_links: 3.4.1
   auto_size_text: 3.0.0
+  barcode_widget: 2.0.3
   cached_network_image: 3.2.1
+  chewie: 1.7.1
   collection: 1.17.2
   dropdown_button2: 2.3.9
   expandable: 5.0.1
@@ -38,7 +40,6 @@ dependencies:
   flutter_cache_manager: 3.3.1
   flutter_plugin_android_lifecycle: 2.0.17
   flutter_rating_bar: 4.0.1
-  flutter_staggered_grid_view: 0.7.0
   font_awesome_flutter: 10.6.0
   from_css_color: 2.0.0
   functions_client: 1.3.2
@@ -104,11 +105,23 @@ dependency_overrides:
   rxdart: 0.27.7
 
 dev_dependencies:
+  flutter_launcher_icons: 0.13.1
   flutter_lints: 3.0.0
+  image: 4.0.17
   lints: 3.0.0
 
   flutter_test:
     sdk: flutter
+
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  web:
+    generate: true
+  image_path: 'assets/images/app_launcher_icon.png'
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
